--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ dmypy.json
 .pytype/
 
 # Cython debug symbols
+# Cython debug symbols
 cython_debug/
 
 # PyCharm
@@ -166,3 +167,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+task/
+*.npz
+*.npy
+results/
