use EGL for headless GPU rendering in libero example

--- a/examples/libero/compose.yml
+++ b/examples/libero/compose.yml
@@ -11,15 +11,15 @@ services:
     init: true
     tty: true
     network_mode: host
-    privileged: true
     volumes:
       - $PWD:/app
       - ../../data:/data
-      - /tmp/.X11-unix:/tmp/.X11-unix:ro
     environment:
       - CLIENT_ARGS
-      - DISPLAY=$DISPLAY
       - MUJOCO_GL=${MUJOCO_GL:-egl}
+      - MUJOCO_EGL_DEVICE_ID=0
+      - NVIDIA_DRIVER_CAPABILITIES=all
+      - PYOPENGL_PLATFORM=egl
     deploy:
       resources:
         reservations:
